@@ -6,22 +6,25 @@ import com.gregtechceu.gtceu.api.data.tag.TagPrefix;
 import com.gregtechceu.gtceu.api.data.worldgen.GTOreDefinition;
 import com.gregtechceu.gtceu.api.data.worldgen.WorldGeneratorUtils;
 import com.gregtechceu.gtceu.api.data.worldgen.ores.OreBlockPlacer;
-import com.gregtechceu.gtceu.common.data.GTMaterials;
 
 import net.minecraft.core.BlockPos;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.util.RandomSource;
 import net.minecraft.world.level.WorldGenLevel;
 import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.levelgen.feature.configurations.OreConfiguration;
 
 import com.mojang.datafixers.util.Either;
 import com.mojang.serialization.Codec;
 import com.mojang.serialization.DataResult;
 import dev.latvian.mods.rhino.util.HideFromJS;
+import it.unimi.dsi.fastutil.ints.IntArrayList;
+import it.unimi.dsi.fastutil.ints.IntList;
+import it.unimi.dsi.fastutil.objects.ObjectIntPair;
 
 import java.util.*;
 import java.util.function.Function;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public abstract class VeinGenerator {
 
@@ -46,44 +49,36 @@ public abstract class VeinGenerator {
     /**
      * @return List of [block|material, chance]
      */
-    public abstract List<Map.Entry<Either<BlockState, Material>, Integer>> getAllEntries();
+    public abstract List<VeinEntry> getAllEntries();
 
     public List<BlockState> getAllBlocks() {
-        return getAllEntries().stream().map(entry -> entry.getKey().map(Function.identity(),
-                material -> ChemicalHelper.getBlock(TagPrefix.ore, material).defaultBlockState())).toList();
+        return getAllEntries().stream()
+                .map(VeinEntry::mapToBlockState)
+                .toList();
     }
 
     public List<Material> getAllMaterials() {
         return getAllEntries().stream()
-                .sorted(Comparator.comparingInt(Map.Entry::getValue))
-                .map(Map.Entry::getKey)
-                .map(either -> either.map(state -> {
-                    var matStack = ChemicalHelper.getMaterialStack(state.getBlock());
-                    return matStack.material();
-                }, Function.identity()))
+                .sorted(Comparator.comparingInt(VeinEntry::chance))
+                .map(VeinEntry::mapToMaterial)
                 .filter(mat -> !mat.isNull())
                 .toList();
     }
 
-    public List<Integer> getAllChances() {
-        return getAllEntries().stream().map(Map.Entry::getValue).toList();
+    public IntList getAllChances() {
+        return IntArrayList.toList(getAllEntries().stream().mapToInt(VeinEntry::chance));
     }
 
-    public List<Map.Entry<Integer, Material>> getValidMaterialsChances() {
+    public List<ObjectIntPair<Material>> getValidMaterialsChances() {
         return getAllEntries().stream()
-                .filter(entry -> entry.getKey()
-                        .map(state -> ChemicalHelper.getMaterialStack(state.getBlock()).material(),
-                                Function.identity()) !=
-                        GTMaterials.NULL)
-                .map(entry -> Map.entry(entry.getValue(), entry.getKey()
-                        .map(state -> ChemicalHelper.getMaterialStack(state.getBlock()).material(),
-                                Function.identity())))
-                .collect(Collectors.toList());
+                .map(entry -> ObjectIntPair.of(entry.mapToMaterial(), entry.chance))
+                .filter(pair -> !pair.first().isNull())
+                .toList();
     }
 
     /**
      * Generate a map of all ore placers (by block position), for each block in this ore vein.
-     * 
+     *
      * <p>
      * Note that, if in any way possible, this is NOT supposed to directly place any of the vein's blocks, as their
      * respective ore placers are invoked at a later time, when the chunk containing them is actually generated.
@@ -103,4 +98,38 @@ public abstract class VeinGenerator {
     }
 
     public abstract Codec<? extends VeinGenerator> codec();
+
+    public record VeinEntry(Either<BlockState, Material> vein, int chance) {
+
+        public static VeinEntry ofBlock(BlockState state, int chance) {
+            return new VeinEntry(Either.left(state), chance);
+        }
+
+        public static VeinEntry ofMaterial(Material mat, int chance) {
+            return new VeinEntry(Either.right(mat), chance);
+        }
+
+        public <T> T map(Function<BlockState, T> left, Function<Material, T> right) {
+            return vein.map(left, right);
+        }
+
+        public BlockState mapToBlockState() {
+            return vein.map(Function.identity(),
+                    material -> ChemicalHelper.getBlock(TagPrefix.ore, material).defaultBlockState());
+        }
+
+        public Material mapToMaterial() {
+            return vein.map(state -> ChemicalHelper.getMaterialStack(state.getBlock()).material(), Function.identity());
+        }
+    }
+
+    public static Stream<Either<BlockState, Material>> mapTarget(Either<List<OreConfiguration.TargetBlockState>, Material> target) {
+        return target.map(tbs -> tbs.stream().map(state -> Either.left(state.state)),
+                mat -> Stream.of(Either.right(mat)));
+    }
+
+    public static Stream<VeinEntry> mapTarget(Either<List<OreConfiguration.TargetBlockState>, Material> target,
+                                              int weight) {
+        return mapTarget(target).map(entry -> new VeinEntry(entry, weight));
+    }
 }
